# env

./: .Xresources  .gitconfig  .gitmodules  .profile  .vimrc  .vimrc~  .wpa.conf  .xbindkeysrc.scm  .xinitrc  README.md  _vimrc  _vimrc~  a5iywwr3.yu4.txt~  aardwolf.sh  c3fszgnu.a2r.txt~  dwylkz.sh  gitpull.sh  gitpush.sh  go.cfg  install  main.cpp  main.cpp~  makefile  proxy.ini  pull  push  server.cfg
.fvwm/: .FvwmConsole-History  .fvwm2rc  .profile  WallpaperMenu  fvwm2rc-guide
.fvwm/cfg/: background.cfg
.ssh/: known_hosts
.vim/: .netrwhist
.xmonad/: .xmobar.hs  xmonad-i386-linux  xmonad.hi  xmonad.hs
Test/: ACA.cpp  ACA.cpp~  LLG.cpp  SAP.cpp  main.cpp  main.cpp~  regrex.txt
access&mutator/: CEDC.cpp
arch/: arch-aux
bookmark/: bookmarks_14-6-13.html
ccmain/: main.cc  makefile
cmain/: main  main.c  makefile
conf/: .hearthstone  dwylkz.mud  gitconfig  profile  tmux.conf  vimrc
conf/utils/: ,  ,p
conf/vim/: .netrwhist  vim
conf/xmonad/: .gitignore  .xmobar.hs  xmonad  xmonad.hs
cppmain/: main  main.cc
doc/awk/: dcd.sh  test.out  test1.awk
doc/bash/: main.sh
doc/emacs/: #main.c#
doc/js/: main.js  (+1 more)
docs/haskell/RWH/ch05/mypretty/: Prettify.hs  PrettyJSON.hs  SimpleJSON.hs  mypretty.cabal
empty/: configure.ac  makefile
empty/src/: Makefile.am
main/: main.cc  makefile
oo_style/: main  main.cc
ryth/: CrossingField.scm  雪华.scm
sgf/: 2014-01-27-dwylkz-hz4mkk.sgf  cnsang-dwylkz-2014-01-19.sgf  submarine-dwylkz-2014-01-20.sgf
structure/: HT.cpp  LCA.cpp  LCA.cpp~  LLG.cpp  LLG.cpp~  MG.cpp  MG.cpp~  MOP.cpp
ubuntu/: ubuntu-aux
(+553 files in other folders)
