AC_INIT(empty, [0.1], [xellosgeteternel@gmail.com])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CXX
AM_PROG_AR
LT_INIT

AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CONFIG_FILES([Makefile
								 src/Makefile])

AC_OUTPUT
