build-type: Simple

name: mypretty
version: 0.1

synopsis: hoho
description:
  A simple library
author: Dwylkz
maintainer: xellosgeteternal@gmail.com

cabal-Version: >= 1.2

library
  Exposed-Modules: Prettify
                   PrettyJSON 
                   SimpleJSON
  Other-Modules:
  Build-Depends: base >= 2.0
